[gd_scene load_steps=12 format=3 uid="uid://bc1oeu8aq6ex2"]

[ext_resource type="Script" uid="uid://ctp2882pqdeye" path="res://interstate-intracept/entities/passive/player.gd" id="1_gdd1w"]
[ext_resource type="Texture2D" uid="uid://bqndy2p5ie1xd" path="res://assets/images/help.jpg" id="2_2xb4s"]
[ext_resource type="Texture2D" uid="uid://d3r7prcfnr6k7" path="res://interstate-intracept/assets/ui/stamUnder.png" id="2_16in1"]
[ext_resource type="Texture2D" uid="uid://onx66066o10h" path="res://interstate-intracept/assets/ui/hbUnder.png" id="2_joj8q"]
[ext_resource type="Texture2D" uid="uid://iqmptb0cmn1b" path="res://interstate-intracept/assets/ui/stamOver.png" id="3_7o3jg"]
[ext_resource type="Texture2D" uid="uid://c5xf0113ggswb" path="res://interstate-intracept/assets/ui/hbOver.png" id="3_k3m4u"]
[ext_resource type="Script" uid="uid://buniqp5831irg" path="res://interstate-intracept/entities/passive/interactionBeam.gd" id="3_l7vnq"]
[ext_resource type="Texture2D" uid="uid://dxyk6cgs4ks50" path="res://interstate-intracept/assets/ui/shit_u_hold/squeak.png" id="6_7o3jg"]
[ext_resource type="FontFile" uid="uid://brn7smfq0l6ao" path="res://assets/fonts/TwCen.ttf" id="7_kat5x"]

[sub_resource type="BoxShape3D" id="BoxShape3D_l7vnq"]
size = Vector3(0.911682, 1.84473, 0.883789)

[sub_resource type="BoxShape3D" id="BoxShape3D_vkiot"]
size = Vector3(0.92334, 1, 0.884521)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_gdd1w")

[node name="mainCol" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0387268, 0.00244141, 0.00927734)
shape = SubResource("BoxShape3D_l7vnq")

[node name="crouchCol" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0373535, -0.326905, 0.0140381)
shape = SubResource("BoxShape3D_vkiot")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.411136, 0)

[node name="Sprite3D" type="Sprite3D" parent="Neck"]
transform = Transform3D(-0.0790912, 0, 8.74228e-08, 0, 0.105535, 0, -6.91438e-09, 0, -1, 0, 0.0692421, 0.657741)
texture = ExtResource("2_2xb4s")

[node name="RayCast3D" type="RayCast3D" parent="Neck"]
target_position = Vector3(0, 0, -3.5)
collide_with_areas = true
debug_shape_custom_color = Color(0.772549, 1, 0.65098, 1)
script = ExtResource("3_l7vnq")

[node name="heldItem" type="Sprite3D" parent="Neck"]
transform = Transform3D(0.197817, -0.00396265, -0.0291983, 0.00348995, 0.199939, -0.00349048, 0.0292586, 0.00294289, 0.197826, -0.15178, -0.220797, -0.863101)
ignore_occlusion_culling = true
no_depth_test = true
texture_filter = 0
texture = ExtResource("6_7o3jg")

[node name="Vision" type="Camera3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00517559)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Bars" type="Node2D" parent="CanvasLayer"]

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer/Bars"]
offset_left = 9.0
offset_top = 7.0
offset_right = 246.0
offset_bottom = 38.0
value = 90.0
texture_under = ExtResource("2_joj8q")
texture_progress = ExtResource("3_k3m4u")

[node name="StamBar" type="TextureProgressBar" parent="CanvasLayer/Bars"]
offset_left = 9.0
offset_top = 43.0
offset_right = 168.0
offset_bottom = 83.0
value = 90.0
texture_under = ExtResource("2_16in1")
texture_progress = ExtResource("3_7o3jg")

[node name="Boxes" type="Node2D" parent="CanvasLayer"]

[node name="Label" type="Label" parent="CanvasLayer/Boxes"]
offset_left = 10.0
offset_top = 505.0
offset_right = 134.0
offset_bottom = 543.0
theme_override_colors/font_color = Color(1, 0.905882, 0.85098, 1)
theme_override_colors/font_outline_color = Color(0.121569, 0.0470588, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("7_kat5x")
theme_override_font_sizes/font_size = 35
text = "ITEM_NAME"

[node name="pick" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.0
offset_top = -99.0
offset_right = 577.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.905882, 0.85098, 1)
theme_override_colors/font_outline_color = Color(0.121569, 0.0470588, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("7_kat5x")
theme_override_font_sizes/font_size = 20
text = "Pick Up [E]"
horizontal_alignment = 1
vertical_alignment = 1
